# libbsd-minimal

./: .gitignore  COPYING  Makefile.am  README  configure.ac
include/: Makefile.am
include/bsd/: err.h  stdlib.h  string.h  stringlist.h  wchar.h
include/bsd/sys/: cdefs.h  queue.h  tree.h
src/: Makefile.am  err.c  fgetwln.c  progname.c  stringlist.c  strlcat.c  strlcpy.c  strnstr.c  strtonum.c  wcslcat.c  wcslcpy.c
