## Process this file with automake to produce Makefile.in

nobase_include_HEADERS = \
	bsd/sys/bitstring.h \
	bsd/sys/cdefs.h \
	bsd/sys/freebsd-cdefs.h \
	bsd/sys/endian.h \
	bsd/sys/queue.h \
	bsd/sys/tree.h \
	bsd/bitstring.h \
	bsd/err.h \
	bsd/stdlib.h \
	bsd/string.h \
	bsd/stringlist.h \
	bsd/wchar.h \
	$(nil)
